// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component > Modification > CopyTimetable can select a timetable 1`] = `
Object {
  "_id": "00000000-0000-0000-0000-000000000000",
  "dwellTime": 0,
  "dwellTimes": Array [],
  "endTime": 79200,
  "exactTimes": false,
  "friday": true,
  "headwaySecs": 600,
  "monday": true,
  "name": "Copy of M-F",
  "phaseAtStop": null,
  "phaseFromStop": null,
  "phaseFromTimetable": null,
  "phaseSeconds": 0,
  "saturday": false,
  "segmentSpeeds": Array [
    16,
  ],
  "startTime": 25200,
  "sunday": false,
  "thursday": true,
  "tuesday": true,
  "wednesday": true,
}
`;

exports[`Component > Modification > CopyTimetable renders correctly 1`] = `
<ModalBody>
  <Select
    label="Region"
    onBlur={[Function]}
    onChange={[Function]}
    value="r1"
  >
    <option
      key="regionOption-r1"
      value="r1"
    >
      mock region
    </option>
  </Select>
  <Select
    label="Project"
    onBlur={[Function]}
    onChange={[Function]}
    value="p1"
  >
    <option
      key="projectOption-p1"
      value="p1"
    >
      mock project
    </option>
  </Select>
  <Select
    label="Modification"
    onBlur={[Function]}
    onChange={[Function]}
    value="m1"
  >
    <option
      key="modificationOption-m1"
      value="m1"
    >
      mock modification
    </option>
  </Select>
  <Select
    label="Timetable"
    onBlur={[Function]}
    onChange={[Function]}
    value="t1"
  >
    <option
      key="timetableOption-t1"
      value="t1"
    >
      M-F
    </option>
  </Select>
  <p>
    <Button
      block={true}
      onClick={[Function]}
      style="success"
    >
      <Icon
        type="plus"
      />
       Copy into new timetable
    </Button>
  </p>
</ModalBody>
`;

exports[`Component > Modification > CopyTimetable renders when no timetables exist in database 1`] = `
<ModalBody>
  <div
    className="alert alert-danger"
    role="alert"
  >
    <Icon
      type="exclamation-circle"
    />
    No timetables available to copy from! Please create a timetable manually.
  </div>
</ModalBody>
`;

exports[`Component > Modification > CopyTimetable renders with a region without timetables 1`] = `
<ModalBody>
  <Select
    label="Region"
    onBlur={[Function]}
    onChange={[Function]}
    value="r1"
  >
    <option
      key="regionOption-r1"
      value="r1"
    >
      mock region
    </option>
  </Select>
  <Select
    label="Project"
    onBlur={[Function]}
    onChange={[Function]}
    value="p1"
  >
    <option
      key="projectOption-p1"
      value="p1"
    >
      mock project
    </option>
  </Select>
  <Select
    label="Modification"
    onBlur={[Function]}
    onChange={[Function]}
    value="m1"
  >
    <option
      key="modificationOption-m1"
      value="m1"
    >
      mock modification
    </option>
  </Select>
  <Select
    label="Timetable"
    onBlur={[Function]}
    onChange={[Function]}
    value="t1"
  >
    <option
      key="timetableOption-t1"
      value="t1"
    >
      M-F
    </option>
  </Select>
  <p>
    <Button
      block={true}
      onClick={[Function]}
      style="success"
    >
      <Icon
        type="plus"
      />
       Copy into new timetable
    </Button>
  </p>
</ModalBody>
`;

exports[`Component > Modification > CopyTimetable segment warnings shows a warning when current modification has no segments 1`] = `
<ModalBody>
  <Select
    label="Region"
    onBlur={[Function]}
    onChange={[Function]}
    value="r1"
  >
    <option
      key="regionOption-r1"
      value="r1"
    >
      mock region
    </option>
  </Select>
  <Select
    label="Project"
    onBlur={[Function]}
    onChange={[Function]}
    value="p1"
  >
    <option
      key="projectOption-p1"
      value="p1"
    >
      mock project
    </option>
  </Select>
  <Select
    label="Modification"
    onBlur={[Function]}
    onChange={[Function]}
    value="m1"
  >
    <option
      key="modificationOption-m1"
      value="m1"
    >
      mock modification
    </option>
  </Select>
  <Select
    label="Timetable"
    onBlur={[Function]}
    onChange={[Function]}
    value="t1"
  >
    <option
      key="timetableOption-t1"
      value="t1"
    >
      M-F
    </option>
  </Select>
  <div
    className="alert alert-info"
    role="alert"
  >
    <Icon
      type="exclamation-circle"
    />
    The modification being copied to and/or from does not have any segments. The default segment speed of 15 km/h will be used.
  </div>
  <p>
    <Button
      block={true}
      onClick={[Function]}
      style="success"
    >
      <Icon
        type="plus"
      />
       Copy into new timetable
    </Button>
  </p>
</ModalBody>
`;

exports[`Component > Modification > CopyTimetable segment warnings shows a warning when modification of timetable being copied has less segments 1`] = `
<ModalBody>
  <Select
    label="Region"
    onBlur={[Function]}
    onChange={[Function]}
    value="r1"
  >
    <option
      key="regionOption-r1"
      value="r1"
    >
      mock region
    </option>
  </Select>
  <Select
    label="Project"
    onBlur={[Function]}
    onChange={[Function]}
    value="p1"
  >
    <option
      key="projectOption-p1"
      value="p1"
    >
      mock project
    </option>
  </Select>
  <Select
    label="Modification"
    onBlur={[Function]}
    onChange={[Function]}
    value="m1"
  >
    <option
      key="modificationOption-m1"
      value="m1"
    >
      mock modification
    </option>
  </Select>
  <Select
    label="Timetable"
    onBlur={[Function]}
    onChange={[Function]}
    value="t1"
  >
    <option
      key="timetableOption-t1"
      value="t1"
    >
      M-F
    </option>
  </Select>
  <div
    className="alert alert-info"
    role="alert"
  >
    <Icon
      type="exclamation-circle"
    />
    The modification of the timetable you are copying from has less segments than the modification you are copying to. The segment speeds will be copied 1 segment(s) and after that, the default segment speed of 15 km/h will be used.
  </div>
  <p>
    <Button
      block={true}
      onClick={[Function]}
      style="success"
    >
      <Icon
        type="plus"
      />
       Copy into new timetable
    </Button>
  </p>
</ModalBody>
`;

exports[`Component > Modification > CopyTimetable segment warnings shows a warning when modification of timetable being copied has more segments 1`] = `
<ModalBody>
  <Select
    label="Region"
    onBlur={[Function]}
    onChange={[Function]}
    value="r1"
  >
    <option
      key="regionOption-r1"
      value="r1"
    >
      mock region
    </option>
  </Select>
  <Select
    label="Project"
    onBlur={[Function]}
    onChange={[Function]}
    value="p1"
  >
    <option
      key="projectOption-p1"
      value="p1"
    >
      mock project
    </option>
  </Select>
  <Select
    label="Modification"
    onBlur={[Function]}
    onChange={[Function]}
    value="m1"
  >
    <option
      key="modificationOption-m1"
      value="m1"
    >
      mock modification
    </option>
  </Select>
  <Select
    label="Timetable"
    onBlur={[Function]}
    onChange={[Function]}
    value="t1"
  >
    <option
      key="timetableOption-t1"
      value="t1"
    >
      M-F
    </option>
  </Select>
  <div
    className="alert alert-info"
    role="alert"
  >
    <Icon
      type="exclamation-circle"
    />
    The modification of the timetable you are copying to has less segments than the modification you are copying from. The segment speeds will be copied 1 segment(s).
  </div>
  <p>
    <Button
      block={true}
      onClick={[Function]}
      style="success"
    >
      <Icon
        type="plus"
      />
       Copy into new timetable
    </Button>
  </p>
</ModalBody>
`;

exports[`Component > Modification > CopyTimetable segment warnings shows a warning when modification of timetable being copied has no segments 1`] = `
<ModalBody>
  <Select
    label="Region"
    onBlur={[Function]}
    onChange={[Function]}
    value="r1"
  >
    <option
      key="regionOption-r1"
      value="r1"
    >
      mock region
    </option>
  </Select>
  <Select
    label="Project"
    onBlur={[Function]}
    onChange={[Function]}
    value="p1"
  >
    <option
      key="projectOption-p1"
      value="p1"
    >
      mock project
    </option>
  </Select>
  <Select
    label="Modification"
    onBlur={[Function]}
    onChange={[Function]}
    value="m1"
  >
    <option
      key="modificationOption-m1"
      value="m1"
    >
      mock modification
    </option>
  </Select>
  <Select
    label="Timetable"
    onBlur={[Function]}
    onChange={[Function]}
    value="t1"
  >
    <option
      key="timetableOption-t1"
      value="t1"
    >
      M-F
    </option>
  </Select>
  <div
    className="alert alert-info"
    role="alert"
  >
    <Icon
      type="exclamation-circle"
    />
    The modification being copied to and/or from does not have any segments. The default segment speed of 15 km/h will be used.
  </div>
  <p>
    <Button
      block={true}
      onClick={[Function]}
      style="success"
    >
      <Icon
        type="plus"
      />
       Copy into new timetable
    </Button>
  </p>
</ModalBody>
`;
